--- a/templates/index.html
+++ b/templates/index.html
@@ -94,9 +94,9 @@ We'll need to figure out how to merge.
       </script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-      <script src="static/js/data.js"></script>
-      <script src="static/js/buildMap.js"></script>
-      <script src="static/js/app.js"></script>
+      <script src="./static/js/data.js"></script>
+      <script src="./static/js/buildMap.js"></script>
+      <script src="./static/js/app.js"></script>
 
       <!-- <script src="static/js/app.js"></script> -->
 </body>
