--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
     color: #f7f7f7;
   }
   .jumbotron {
-    background-image: url("/static/images/spaceneedle.jpg");
+    background-image: url("././Resources/images/spaceneedle.jpg");
     background-size: cover;
     background-position: 0% 15%;
     height: 350px;
